--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
     conda config --add channels conda-forge;
     conda config --set always_yes yes;
   fi
-- conda update -n base conda
+- conda update -n root conda
 - if ! command -v pygmentize > /dev/null; then conda install pygments; fi
 - if ! command -v tectonic > /dev/null; then conda install tectonic; fi
 - conda update --all
