--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ install:
 - if ! command -v conda > /dev/null; then
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     bash miniconda.sh -b -p $HOME/miniconda -u;
-    conda config --add channels conda-forge;
-    conda config --set always_yes yes;
   fi
+- conda config --add channels conda-forge;
+- conda config --set always_yes yes;
 - conda update -n root conda
 - if ! command -v pygmentize > /dev/null; then conda install pygments; fi
 - if ! command -v tectonic > /dev/null; then conda install tectonic; fi
