--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,5 @@ deploy:
   keep-history: false
   on:
     branch: master
+  edge:
+    branch: pages-ivar-set # https://github.com/travis-ci/travis-ci/issues/9312
